--- a/wp-content/themes/origin/style.css
+++ b/wp-content/themes/origin/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:
+Theme Name: Default Template
 Theme URI:
-Author:
-Author URI:
-Description:
-Version:
+Author: mimhhs
+Author URI: mimhhs.net
+Description: Most simple theme for demo
+Version: 1.0
 License:
 License URI:
 Tags:
