トップコーディング

--- a/wp-content/themes/ludens/assets/sass/app.scss
+++ b/wp-content/themes/ludens/assets/sass/app.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import 'variables';
 @import 'utils';
 @import 'reset';
+
+@import 'top';
