スタイルシート切り出し

--- a/wp-content/themes/ludens/assets/sass/app.scss
+++ b/wp-content/themes/ludens/assets/sass/app.scss
@@ -1,6 +1,11 @@
 @import 'variables';
 @import 'utils';
 @import 'reset';
+@import 'base';
+
+@import 'header';
+@import 'footer';
+@import 'menu';
 
 @import 'top';
 @import 'coming-soon';
