フォント設定

--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -18,7 +18,8 @@ $color-input-border: #93989e;
 
 /* font families
 ----------------- */
-$font-sansserif: 'Source Sans Pro', 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
+$font-serif: 'MSPMincho', 'ヒラギノ明朝 ProN W3', 'HiraMinProN-W3', 'HG明朝E', 'ＭＳ Ｐ明朝', 'MS PMincho', 'MS 明朝', serif;
+$font-sansserif: 'ヒラギノ丸ゴ ProN', 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', sans-serif;
 
 /* font sizes
 ----------------- */
