フッターを画像からテキストに

--- a/wp-content/themes/ludens/assets/sass/_reset.scss
+++ b/wp-content/themes/ludens/assets/sass/_reset.scss
@@ -51,7 +51,7 @@ blockquote {
   -webkit-tap-highlight-color: transparent;
 }
 
-a, span, em, time {
+a, span, em, time, small {
   font-size: inherit;
   font-weight: inherit;
   font-style: inherit;
