--- a/wp-content/themes/ludens/assets/sass/_footer.scss
+++ b/wp-content/themes/ludens/assets/sass/_footer.scss
@@ -5,9 +5,12 @@
   &__copyright {
     text-align: right;
 
-    img {
-      height: 14px;
+    small {
+      color: #fff;
+      font-family: $font-serif;
+      font-size: 12px;
+      font-weight: bold;
+      line-height: 14px;
     }
   }
-
 }
