横幅いっぱい

--- a/wp-content/themes/ludens/assets/sass/_access.scss
+++ b/wp-content/themes/ludens/assets/sass/_access.scss
@@ -1,6 +1,7 @@
 .access {
+  max-width: $width-wrapper;
+  margin: 0 auto;
   padding: 30px;
-  background-image: url('../images/bg.jpg');
 }
 
 .map {
