--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -28,9 +28,9 @@ $font-md: 14px;
 $font-lg: 18px;
 $font-xlg: 24px;
 
-/* break points
+/* sizes
 ----------------- */
-$width-sidebar: 220px;
+$width-wrapper: 1100px;
 
 /* break points
 ----------------- */
