--- a/wp-content/themes/ludens/assets/sass/_header.scss
+++ b/wp-content/themes/ludens/assets/sass/_header.scss
@@ -1,10 +1,15 @@
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 75px;
-  padding: 5px 10px;
   background-image: url('../images/bg-lightblue.jpg');
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: $width-wrapper;
+    height: 75px;
+    margin: 0 auto;
+    padding: 5px 10px;
+  }
 
   &__logo {
     width: 480px;
