コンセプトページ

--- a/wp-content/themes/ludens/assets/sass/_reset.scss
+++ b/wp-content/themes/ludens/assets/sass/_reset.scss
@@ -33,7 +33,7 @@ footer, header, main,
 menu, nav, section, summary,
 blockquote {
   font-family: $font-sansserif;
-  font-size: 1.4rem;
+  font-size: $font-md;
   font-weight: normal;
   font-style:normal;
   line-height: 1.6;
