--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -24,13 +24,14 @@ $font-sansserif: 'ヒラギノ丸ゴ ProN', 'ヒラギノ角ゴ Pro', 'Hiragino 
 /* font sizes
 ----------------- */
 $font-sm: 10px;
-$font-md: 14px;
-$font-lg: 18px;
-$font-xlg: 24px;
+$font-md: 16px;
+$font-lg: 20px;
+$font-xlg: 36px;
 
 /* sizes
 ----------------- */
 $width-wrapper: 1100px;
+$width-content: 940px;
 
 /* break points
 ----------------- */
