--- a/wp-content/themes/ludens/assets/sass/app.scss
+++ b/wp-content/themes/ludens/assets/sass/app.scss
@@ -2,12 +2,13 @@
 @import 'utils';
 @import 'reset';
 @import 'fonts';
-@import 'base';
 
 @import 'header';
 @import 'footer';
 @import 'menu';
+@import 'content';
 
 @import 'top';
+@import 'concept';
 @import 'coming-soon';
 @import 'access';
