--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -4,6 +4,7 @@
 ----------------- */
 $color-text: #7b7b7b;
 $color-text-blue: #697584;
+$color-gold: #ae8a67;
 
 /* font families
 ----------------- */
