明朝フォントを遊明朝に

--- a/wp-content/themes/ludens/assets/sass/_fonts.scss
+++ b/wp-content/themes/ludens/assets/sass/_fonts.scss
@@ -1,11 +1,11 @@
 @charset 'utf-8';
 
 @font-face {
-  font-family: 'MSPMincho';
-  src: url('../fonts/MSPMincho.ttf') format('truetype')
+  font-family: 'ヒラギノ丸ゴ ProN';
+  src: url('../fonts/HiraginoMaruGothicPro.ttf') format('truetype')
 }
 
 @font-face {
-  font-family: 'ヒラギノ丸ゴ ProN';
-  src: url('../fonts/HiraginoMaruGothicPro.ttc') format('truetype')
+  font-family: 'YuMincho';
+  src: url('../fonts/YuMinchoDemibold.ttf') format('truetype')
 }
