プランページとスマホ用の一時調整

--- a/wp-content/themes/ludens/assets/sass/_content.scss
+++ b/wp-content/themes/ludens/assets/sass/_content.scss
@@ -41,7 +41,7 @@
     font-family: $font-serif;
   }
 
-  &__link-list {
+  &__box {
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
