--- a/wp-content/themes/ludens/assets/sass/_reset.scss
+++ b/wp-content/themes/ludens/assets/sass/_reset.scss
@@ -10,6 +10,7 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  min-width: $width-wrapper;
   vertical-align: baseline;
   text-decoration: none;
   letter-spacing: .07em;
@@ -21,6 +22,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
+  -webkit-text-size-adjust: 100%;
 }
 
 body, div,
