--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -5,6 +5,8 @@
 $color-text: #7b7b7b;
 $color-text-blue: #697584;
 $color-gold: #ae8a67;
+$color-pink: #f74678;
+$color-gray: #e8e8e8;
 
 /* font families
 ----------------- */
