問い合わせページ

--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -466,6 +466,66 @@ table {
   font-size: 20px;
   font-weight: bold; }
 
+.contact__form {
+  width: 600px;
+  margin: 30px auto; }
+
+.contact__formitem {
+  display: flex;
+  padding: 5px 0; }
+  .contact__formitem > input,
+  .contact__formitem > span {
+    padding: 10px; }
+
+.contact__label {
+  flex-shrink: 0;
+  width: 150px;
+  padding: 10px 0; }
+
+.contact__input {
+  display: block;
+  -ms-grid-row-align: center;
+      align-self: center;
+  flex-grow: 1; }
+  .contact__input input,
+  .contact__input textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #e8e8e8;
+    border-radius: 3px; }
+
+.contact__buttons {
+  margin: 20px 0;
+  text-align: center; }
+
+.contact__submit, .contact__back {
+  display: inline-block;
+  min-width: 290px;
+  padding: 10px;
+  cursor: pointer;
+  transition: .3s;
+  border: 1px solid #ae8a67;
+  border-radius: 3px;
+  box-shadow: none;
+  font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
+  font-size: 16px;
+  font-weight: bold; }
+
+.contact__submit {
+  color: #fff;
+  background-color: #ae8a67; }
+  .contact__submit:hover {
+    opacity: .8; }
+
+.contact__back {
+  margin-right: 20px;
+  color: #ae8a67; }
+  .contact__back:hover {
+    background-color: #e3d7cb; }
+
+.contact__complete {
+  padding: 0 30px; }
+
 .coming-soon {
   display: flex;
   justify-content: center;
