--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -574,3 +574,16 @@ table {
   margin: 0 auto; }
   .map__info {
     margin-top: 30px; }
+
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 0.8; }
+
+.slick-dots li button:before {
+  opacity: 1;
+  color: #c2f9f6;
+  font-size: 16px;
+  line-height: 30px; }
+
+.slick-dots li.slick-active button:before {
+  opacity: 1;
+  color: #365c7e; }
