--- a/wp-content/themes/ludens/assets/sass/_content.scss
+++ b/wp-content/themes/ludens/assets/sass/_content.scss
@@ -1,11 +1,21 @@
+.content,
+.content-top {
+  @include screen-sm {
+    padding: $height-header-sp 0 30px;
+  }
+}
+
 .content {
   margin: auto;
-  padding: 30px 0;
   background-image: url('../images/common/bg.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
+  @include screen-lg {
+    padding: 30px 0;
+  }
 }
+
 
 .content-head {
   width: 1000px;
