--- a/wp-content/themes/ludens/assets/sass/_utils.scss
+++ b/wp-content/themes/ludens/assets/sass/_utils.scss
@@ -1,17 +1,23 @@
 @mixin screen-sm() {
-  @media screen and (max-width: $breakpoint-sm - 1) {
-    @content;
-  }
-}
-
-@mixin screen-md() {
-  @media screen and (min-width: $breakpoint-sm) {
+  @media screen and (max-width: $breakpoint - 1) {
     @content;
   }
 }
 
 @mixin screen-lg() {
-  @media screen and (min-width: $breakpoint-lg) {
+  @media screen and (min-width: $breakpoint) {
     @content;
+  }
+}
+
+%show-on-pc {
+  @include screen-sm {
+    display: none;
+  }
+}
+
+%show-on-sp {
+  @include screen-lg {
+    display: none;
   }
 }
