--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -26,7 +26,12 @@ $font-xlg: 36px;
 $width-wrapper: 1100px;
 $width-content: 940px;
 
+$height-header-sp: 60px;
+
 /* break points
 ----------------- */
-$breakpoint-sm: 640px;
-$breakpoint-lg: 1000px;
+$breakpoint: 768px;
+
+/* z-index
+----------------- */
+$z-index-header: 100;
