--- a/wp-content/themes/ludens/assets/sass/_contact.scss
+++ b/wp-content/themes/ludens/assets/sass/_contact.scss
@@ -4,7 +4,7 @@
     color: $color-gold;
     border-bottom: 1px solid $color-gold;
     font-family: $font-serif;
-    font-size: $font-lg;
+    font-size: $font-pc-lg;
     font-weight: bold;
   }
 
@@ -83,7 +83,7 @@
     border-radius: 3px;
     box-shadow: none;
     font-family: $font-serif;
-    font-size: $font-md;
+    font-size: $font-pc-md;
     font-weight: bold;
 
     appearance: none;
