--- a/wp-content/themes/ludens/assets/sass/_variables.scss
+++ b/wp-content/themes/ludens/assets/sass/_variables.scss
@@ -16,10 +16,15 @@ $font-sansserif-kaku: 'ヒラギノ角ゴ Pro', 'Hiragino Kaku Gothic Pro', 'メ
 
 /* font sizes
 ----------------- */
-$font-sm: 10px;
-$font-md: 16px;
-$font-lg: 20px;
-$font-xlg: 36px;
+$font-sp-sm: 10px;
+$font-sp-md: 14px;
+$font-sp-lg: 18px;
+$font-sp-xlg: 30px;
+
+$font-pc-sm: 10px;
+$font-pc-md: 16px;
+$font-pc-lg: 20px;
+$font-pc-xlg: 36px;
 
 /* sizes
 ----------------- */
