--- a/wp-content/themes/ludens/assets/sass/_footer.scss
+++ b/wp-content/themes/ludens/assets/sass/_footer.scss
@@ -13,7 +13,7 @@
     small {
       color: #fff;
       font-family: $font-serif;
-      font-size: $font-sm;
+      font-size: $font-pc-sm;
       font-weight: bold;
       line-height: 14px;
       @include screen-lg {
