--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -55,7 +55,7 @@ footer, header, main,
 menu, nav, section, summary,
 blockquote {
   font-family: "\30D2\30E9\30AE\30CE\4E38\30B4   ProN", "\30D2\30E9\30AE\30CE\89D2\30B4   Pro", "Hiragino Kaku Gothic Pro", "\30E1\30A4\30EA\30AA", "Meiryo", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
   font-style: normal;
   line-height: 1.6;
@@ -71,6 +71,17 @@ blockquote {
   -webkit-font-feature-settings: "palt";
           font-feature-settings: "palt";
   -webkit-tap-highlight-color: transparent; }
+  @media screen and (min-width: 768px) {
+    body, div,
+    h1, h2, h3, h4, h5, h6, p,
+    a, span, time, mark,
+    dl, dt, dd, ol, ul, li,
+    form, label, legend,
+    article,
+    footer, header, main,
+    menu, nav, section, summary,
+    blockquote {
+      font-size: 16px; } }
 
 a, span, em, time, small {
   font-size: inherit;
@@ -346,28 +357,36 @@ table {
       padding: 30px 0; } }
 
 .content-head {
-  width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
   background-color: rgba(255, 255, 255, 0.8); }
+  @media screen and (min-width: 768px) {
+    .content-head {
+      width: 1000px; } }
   .content-head__main {
     display: flex;
     align-items: center;
-    padding: 20px 0 10px;
-    border-bottom: 2px solid #a9a9a9; }
+    padding: 20px 0 10px; }
   .content-head__title {
     color: #7b7b7b;
     font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold; }
+    @media screen and (min-width: 768px) {
+      .content-head__title {
+        font-size: 36px; } }
   .content-head__sub {
     margin-left: 10px;
     color: #7b7b7b;
     font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold; }
+    @media screen and (min-width: 768px) {
+      .content-head__sub {
+        font-size: 20px; } }
   .content-head__description {
     padding: 5px 0;
+    border-top: 2px solid #a9a9a9;
     color: #7b7b7b;
     font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif; }
   .content-head__box {
@@ -393,11 +412,13 @@ table {
       content: '\25B6\FE0E'; }
 
 .content-main {
-  width: 1000px;
   margin: 30px auto;
   padding: 30px 0;
   border: 2px solid #a9a9a9;
   background-color: #fff; }
+  @media screen and (min-width: 768px) {
+    .content-main {
+      width: 1000px; } }
   .content-main__head {
     width: 940px;
     margin: auto;
@@ -791,10 +812,29 @@ table {
   padding: 30px; }
 
 .map {
-  width: 800px;
+  width: 80%;
   margin: 0 auto; }
-  .map__info {
-    margin-top: 30px; }
+  .map__iframe {
+    display: block;
+    margin: auto auto 30px; }
+    @media screen and (max-width: 767px) {
+      .map__iframe {
+        display: block;
+        width: 60vw;
+        height: 45vw; } }
+  .map__title {
+    margin: 5px 0;
+    font-size: 18px;
+    font-weight: bold; }
+    @media screen and (min-width: 768px) {
+      .map__title {
+        font-size: 20px; } }
+  .map__info-title {
+    margin-top: 5px;
+    font-weight: bold; }
+    .map__info-title::before {
+      margin-right: 5px;
+      content: '\25C6'; }
 
 .slick-dots li button:hover:before, .slick-dots li button:focus:before {
   opacity: 0.8; }
